<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/bg_color">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/mobile_main_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_20_dp"
            android:gravity="center"
            android:text="@string/welcome_to_india"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/common_20_sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/common_16_dp"
            android:text="@string/home_description"
            android:textSize="@dimen/common_16_sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/common_16_dp"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtLogin"
                style="@style/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:background="@color/btn_color"
                android:textAllCaps="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtRegister"
                style="@style/buttonStyleRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_10_dp"
                android:layout_marginLeft="@dimen/common_10_dp"
                android:layout_weight="1"
                android:text="@string/register"
                android:background="@color/black"
                android:textAllCaps="true" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>