<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.speedride.customer.base.modules.login.view.activity.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="@dimen/common_16_dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/common_200_dp"
            android:layout_height="@dimen/common_200_dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/common_50_dp"
            android:src="@drawable/ic_emergency_contacts" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_50_dp"
            android:fontFamily="@font/nunito"
            android:gravity="center"
            android:text="@string/make_your_ride_safe"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/common_18_sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_20_dp"
            android:fontFamily="@font/nunito"
            android:gravity="center"
            android:text="@string/emergency_contacts_content"
            android:textColor="@color/black"
            android:textSize="@dimen/common_14_sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtAddContacts"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/common_16_dp"
        android:layout_marginTop="@dimen/common_16_dp"
        android:layout_marginEnd="@dimen/common_16_dp"
        android:layout_marginBottom="@dimen/common_16_dp"
        android:text="@string/add_contacts"
        android:background="@color/btn_color"
        android:textAllCaps="true" />
</RelativeLayout>