<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivCancel"
            android:layout_width="@dimen/common_30_dp"
            android:layout_height="@dimen/common_30_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            android:src="@drawable/ic_cancel"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/common_20_dp"
            android:layout_marginTop="@dimen/common_10_dp"
            android:text="@string/payment_mode"
            android:textColor="@color/black"
            android:textSize="@dimen/common_16_sp" />

    </RelativeLayout>



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_marginTop="@dimen/common_20_dp"
    >
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCash"
        android:layout_width="@dimen/common_100_dp"
        android:layout_height="@dimen/common_40_dp"
        android:layout_marginTop="@dimen/common_25_dp"
        android:text="@string/cash"
        android:textSize="@dimen/common_16_sp"
        android:background="@color/btn_color"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginBottom="@dimen/common_20_dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCard"
        android:layout_width="@dimen/common_100_dp"
        android:layout_height="@dimen/common_40_dp"
        android:layout_marginTop="@dimen/common_25_dp"
        android:layout_marginStart="@dimen/common_20_dp"
        android:text="@string/payment_mode_card"
        android:textSize="@dimen/common_16_sp"
        android:background="@color/btn_color"

        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginBottom="@dimen/common_20_dp"
        />

</LinearLayout>




</LinearLayout>