<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_0_7_dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/common_10_dp"
            android:layout_marginLeft="@dimen/common_10_dp"
            android:src="@drawable/ic_marker" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/nunito_semibold"
            android:maxLines="2"
            android:padding="@dimen/common_16_dp"
            android:text="Address"
            android:textColor="@color/colorText"
            android:textSize="@dimen/common_12_sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_0_7_dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/common_10_dp"
        android:visibility="gone"
        android:weightSum="18.1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_cash_icons" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtPaymentMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:textColor="@color/colorText"
                android:textSize="@dimen/common_14_sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/change_mode"
                android:textColor="@color/gray"
                android:textSize="@dimen/common_10_sp" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.05"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_share" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text="@string/share"
                android:textColor="@color/colorText"
                android:textSize="@dimen/common_14_sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/share_with_friends"
                android:textColor="@color/gray"
                android:textSize="@dimen/common_10_sp" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.05"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_sos_icons" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text="@string/sos"
                android:textColor="@color/colorText"
                android:textSize="@dimen/common_14_sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/emergency"
                android:textColor="@color/gray"
                android:textSize="@dimen/common_10_sp" />
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCancelBooking"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_16_dp"
        android:layout_marginTop="@dimen/common_10_dp"
        android:layout_marginRight="@dimen/common_16_dp"
        android:layout_marginBottom="@dimen/common_10_dp"
        android:text="@string/cancel_booking" />
</LinearLayout>